--- a/clusters/its4u-lab2/argocd/bootstrap/values.yaml
+++ b/clusters/its4u-lab2/argocd/bootstrap/values.yaml
@@ -19,6 +19,14 @@ applications:
    source:
      path: clusters/its4u-lab2/apps/banner/base
 
+ web-terminal:
+   project: cluster-config
+   annotations:
+     argocd.argoproj.io/compare-options: IgnoreExtraneous
+     argocd.argoproj.io/sync-wave: '21'
+   source:
+     path: components/apps/web-terminal-operator/base
+
 # alertmanager:
 #   annotations:
 #     argocd.argoproj.io/compare-options: IgnoreExtraneous
@@ -160,13 +168,7 @@ applications:
   #   source:
   #     path: components/apps/kyverno-acm/base
 
-# web-terminal:
-#   project: cluster-config
-#   annotations:
-#     argocd.argoproj.io/compare-options: IgnoreExtraneous
-#     argocd.argoproj.io/sync-wave: '21'
-#   source:
-#     path: components/apps/web-terminal-operator/base
+
 #
 # node-config:
 #   annotations:
