--- a/clusters/default/argocd/bootstrap/values.yaml
+++ b/clusters/default/argocd/bootstrap/values.yaml
@@ -34,6 +34,19 @@ projects:
 
 applications:
 
+ banner:
+   annotations:
+     argocd.argoproj.io/compare-options: IgnoreExtraneous
+   source:
+     path: clusters/{{fromClusterClaim "gitops"}}/apps/banner/base
+
+ web-terminal:
+   project: cluster-config
+   annotations:
+     argocd.argoproj.io/compare-options: IgnoreExtraneous
+     argocd.argoproj.io/sync-wave: '21'
+   source:
+     path: components/apps/web-terminal-operator/base
 # camel-k-operator:
 #   annotations:
 #     argocd.argoproj.io/sync-wave: "21"
