--- a/clusters/its4u-lab2/argocd/bootstrap/values.yaml
+++ b/clusters/its4u-lab2/argocd/bootstrap/values.yaml
@@ -13,12 +13,12 @@ default:
 
 applications:
 
- banner:
-   annotations:
-     argocd.argoproj.io/compare-options: IgnoreExtraneous
-   source:
-     path: clusters/its4u-lab2/apps/banner/base
-
+# banner:
+#   annotations:
+#     argocd.argoproj.io/compare-options: IgnoreExtraneous
+#   source:
+#     path: clusters/its4u-lab2/apps/banner/base
+#
 
 
 # alertmanager:
