--- a/clusters/its4u-lab/apps/banner/base/banner.yaml
+++ b/clusters/its4u-lab/apps/banner/base/banner.yaml
@@ -3,7 +3,7 @@ kind: ConsoleNotification
 metadata:
   name: banner
 spec:
-  text: "Cluster: RHPDS"
+  text: "ITS4U - lab"
   location: BannerTop
   color: '#fff'
   backgroundColor: '#0088ce'
