--- a/clusters/its4u-lab2/apps/banner/base/home-banner.yaml
+++ b/clusters/its4u-lab2/apps/banner/base/home-banner.yaml
@@ -3,7 +3,7 @@ kind: ConsoleNotification
 metadata:
   name: home-banner
 spec:
-  text: "Cluster: ITS4U - lab2"
+  text: "ITS4U - lab2"
   location: BannerTop
   color: '#fff'
   backgroundColor: '#0088ce'
