--- a/clusters/its4u-lab/argocd/bootstrap/values.yaml
+++ b/clusters/its4u-lab/argocd/bootstrap/values.yaml
@@ -34,3 +34,11 @@ applications:
      argocd.argoproj.io/sync-wave: '21'
    source:
      path: components/apps/pipelines-operator/base
+
+ dev-tools:
+   project: cluster-config
+   annotations:
+     argocd.argoproj.io/compare-options: IgnoreExtraneous
+     argocd.argoproj.io/sync-wave: '21'
+   source:
+     path: components/apps/dev-tools/default
