--- a/components/apps/dev-tools/overlays/default/sonarqube-admin-secret.yaml
+++ b/components/apps/dev-tools/overlays/default/sonarqube-admin-secret.yaml
@@ -3,6 +3,5 @@ kind: Secret
 metadata:
   name: sonarqube-admin
   namespace: dev-tools
-spec:
-  stringData:
-    password: its4uITS4U
+data:
+  password: aXRzNHVJVFM0VSE=
