--- a/clusters/its4u-lab2/argocd/bootstrap/values.yaml
+++ b/clusters/its4u-lab2/argocd/bootstrap/values.yaml
@@ -27,7 +27,21 @@ applications:
    source:
      path: components/apps/web-terminal-operator/base
 
+ pipelines-operator:
+   project: cluster-config
+   annotations:
+     argocd.argoproj.io/compare-options: IgnoreExtraneous
+     argocd.argoproj.io/sync-wave: '21'
+   source:
+     path: components/apps/pipelines-operator/base
 
+ dev-tools:
+   project: cluster-config
+   annotations:
+     argocd.argoproj.io/compare-options: IgnoreExtraneous
+     argocd.argoproj.io/sync-wave: '21'
+   source:
+     path: components/apps/dev-tools/overlays/default
 # alertmanager:
 #   annotations:
 #     argocd.argoproj.io/compare-options: IgnoreExtraneous
