move application for overall clusters

--- a/clusters/default/argocd/bootstrap/values.yaml
+++ b/clusters/default/argocd/bootstrap/values.yaml
@@ -34,6 +34,25 @@ projects:
 
 applications:
 
+ dev-tools:
+   project: cluster-config
+   annotations:
+     argocd.argoproj.io/compare-options: IgnoreExtraneous
+     argocd.argoproj.io/sync-wave: '21'
+   source:
+     path: components/apps/dev-tools/overlays/default
+
+ web-terminal:
+   project: cluster-config
+   annotations:
+     argocd.argoproj.io/compare-options: IgnoreExtraneous
+     argocd.argoproj.io/sync-wave: '21'
+   source:
+     path: components/apps/web-terminal-operator/base
+
+
+
+
 
 
 #web-terminal:
