--- a/components/configs/acm/policy-managed-acs-operator.yaml
+++ b/components/configs/acm/policy-managed-acs-operator.yaml
@@ -123,7 +123,7 @@ spec:
                   source:
                     path: components/apps/acs-secured-cluster/base
                     repoURL: https://github.com/kevbrain/cluster-config.git
-                    targetRevision: main
+                targetRevision: HEAD
                   syncPolicy:
                     automated:
                       prune: false
