--- a/components/apps/acs-secured-cluster/base/init-bundle-setup-job.yaml
+++ b/components/apps/acs-secured-cluster/base/init-bundle-setup-job.yaml
@@ -2,7 +2,9 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   annotations:
+    argocd.argoproj.io/hook: Sync
     argocd.argoproj.io/sync-wave: "2"  
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
   labels:
     run: init-bundle-setup-job
   name: init-bundle-setup-job
