--- a/clusters/its4u-lab/argocd/bootstrap/values.yaml
+++ b/clusters/its4u-lab/argocd/bootstrap/values.yaml
@@ -27,7 +27,7 @@ applications:
    source:
      path: components/apps/pipelines-operator/base
 
- banner:
+ amq-streams:
    annotations:
      argocd.argoproj.io/compare-options: IgnoreExtraneous
    source:
