--- a/components/apps/amq-streams/base/subscription.yaml
+++ b/components/apps/amq-streams/base/subscription.yaml
@@ -2,7 +2,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   labels:
-    operators.coreos.com/amq-streams.openshift-operators: ''
+    operators.coreos.com/amq-streams.openshift-operators: ""
   name: amq-streams
   namespace: openshift-operators
 spec:
@@ -11,4 +11,3 @@ spec:
   name: amq-streams
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: amqstreams.v2.2.0-4
