--- a/clusters/its4u-lab/apps/its4u-auth/base/openid-client-secret-tltvc.yaml
+++ b/clusters/its4u-lab/apps/its4u-auth/base/openid-client-secret-tltvc.yaml
@@ -1,7 +1,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: openid-client-secret-tltvc
+  name: openid-client-secret-its4u
   namespace: openshift-config
-  clientSecret: ODIxMjhkN2YtMTVjOS00M2QxLWJkNTgtMmEwYTA3OWU3M2Ey
-type: Opaque
+data:
+  clientSecret: ZmFiZjJlZjAtM2FlZS00ZWVkLWE3ODctMjZlNTk1OGQ5YTYy
