--- a/clusters/its4u-lab/apps/its4u-auth/base/auth-cluster.yaml
+++ b/clusters/its4u-lab/apps/its4u-auth/base/auth-cluster.yaml
@@ -4,22 +4,22 @@ metadata:
   name: cluster
 spec:
   identityProviders:
-  - mappingMethod: claim
-    name: SSO-ITS4U-GROUP
-    openID:
-      claims:
-        email:
-        - email
-        name:
-        - name
-        preferredUsername:
-        - preferred_username
-      clientID: ocp-lab.its4u.eu
-      clientSecret:
-        name: openid-client-secret-tltvc
-      extraScopes: []
-      issuer: https://sso.its4u-group.com/auth/realms/ITs4U
-    type: OpenID
+    - mappingMethod: claim
+      name: SSO-OCP-LAB
+      openID:
+        claims:
+          email:
+            - email
+          name:
+            - name
+          preferredUsername:
+            - preferred_username
+        clientID: OpenshiftClientID
+        clientSecret:
+          name: openid-client-secret-its4u
+        extraScopes: []
+        issuer: 'https://sso.its4u-group.com/auth/realms/ocp-lab'
+      type: OpenID
   templates:
     error:
       name: error-template
