add auth-branding argo-app

--- a/clusters/its4u-lab/argocd/bootstrap/values.yaml
+++ b/clusters/its4u-lab/argocd/bootstrap/values.yaml
@@ -12,6 +12,12 @@ default:
       targetRevision: HEAD
 
 applications:
+
+ auth-branding:
+   annotations:
+     argocd.argoproj.io/compare-options: IgnoreExtraneous
+   source:
+     path: clusters/its4u-lab/apps/its4u-auth/base
  
  banner:
    annotations:
