--- a/components/configs/acm/policies/policy-managed-acs-operator.yaml
+++ b/components/configs/acm/policies/policy-managed-acs-operator.yaml
@@ -1,8 +1,8 @@
 apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
-  name: policy-managed-pipeline-operator
-  namespace: openshift-gitops
+  name: policy-managed-acs-operator
+  namespace: policies
   annotations:
     policy.open-cluster-management.io/categories: CM Configuration Management, CA Security Assessment and Authorization
     policy.open-cluster-management.io/controls: CM-2 Baseline Configuration, CA-2
@@ -11,11 +11,43 @@ metadata:
 spec:
   disabled: false
   policy-templates:
-     - objectDefinition:
+    - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1
         kind: ConfigurationPolicy
         metadata:
-          name: pipeline-operator-subscription
+          name: rhacs-operator-ns
+        spec:
+          object-templates:
+            - complianceType: musthave
+              objectDefinition:
+                apiVersion: v1
+                kind: Namespace
+                metadata:
+                  name: rhacs-operator
+          remediationAction: inform
+          severity: high
+    - objectDefinition:
+        apiVersion: policy.open-cluster-management.io/v1
+        kind: ConfigurationPolicy
+        metadata:
+          name: rhacs-operator-group
+        spec:
+          object-templates:
+            - complianceType: musthave
+              objectDefinition:
+                apiVersion: operators.coreos.com/v1
+                kind: OperatorGroup
+                metadata:
+                  generateName: rhacs-operator-
+                  namespace: rhacs-operator
+'
+          remediationAction: inform
+          severity: high
+    - objectDefinition:
+        apiVersion: policy.open-cluster-management.io/v1
+        kind: ConfigurationPolicy
+        metadata:
+          name: acs-operator-subscription
         spec:
           object-templates:
             - complianceType: musthave
@@ -23,21 +55,21 @@ spec:
                 apiVersion: operators.coreos.com/v1alpha1
                 kind: Subscription
                 metadata:
-                  name: openshift-pipelines-operator-rh
-                  namespace: openshift-operators
+                  name: rhacs-operator
+                  namespace: rhacs-operator
                 spec:
-                  name: openshift-pipelines-operator-rh
-                  channel: pipelines-1.8
+                  channel: latest
+                  name: rhacs-operator
                   installPlanApproval: Automatic
                   source: redhat-operators
                   sourceNamespace: openshift-marketplace
           remediationAction: inform
           severity: high
-     - objectDefinition:
+    - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1
         kind: ConfigurationPolicy
         metadata:
-          name: pipeline-operator-status
+          name: acs-operator-status
         spec:
           object-templates:
             - complianceType: musthave
@@ -45,25 +77,12 @@ spec:
                 apiVersion: operators.coreos.com/v1alpha1
                 kind: ClusterServiceVersion
                 metadata:
-                  namespace: openshift-operators
+                  namespace: rhacs-operator
                 spec:
-                  displayName: Red Hat OpenShift Pipelines
+                  displayName: Advanced Cluster Security for Kubernetes
                 status:
                   phase: Succeeded
           remediationAction: inform
           severity: high
   remediationAction: enforce
----
-apiVersion: policy.open-cluster-management.io/v1
-kind: PlacementBinding
-metadata:
-  name: policy-managed-pipeline-operator-placement-binding
-  namespace: openshift-gitops
-placementRef:
-  name: placement-policy-gitops
-  apiGroup: apps.open-cluster-management.io
-  kind: PlacementRule
-subjects:
-  - name: policy-managed-pipeline-operator
-    apiGroup: policy.open-cluster-management.io
-    kind: Policy
+
