--- a/components/configs/acm/policies/policy-managed-compliance-operator.yaml
+++ b/components/configs/acm/policies/policy-managed-compliance-operator.yaml
@@ -2,7 +2,7 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
   name: policy-managed-compliance-operator
-  namespace: openshift-gitops
+  namespace: policies
   annotations:
     policy.open-cluster-management.io/categories: CM Configuration Management, CA Security Assessment and Authorization
     policy.open-cluster-management.io/controls: CM-2 Baseline Configuration, CA-2
@@ -86,32 +86,5 @@ spec:
           remediationAction: inform
           severity: high
   remediationAction: enforce
----
-apiVersion: apps.open-cluster-management.io/v1
-kind: PlacementRule
-metadata:
-  name: placement-policy-gitops
-  namespace: openshift-gitops
-spec:
-  clusterConditions:
-    - status: "True"
-      type: ManagedClusterConditionAvailable
-  clusterSelector:
-    matchExpressions:
-      - key: gitops
-        operator: Exists
-        values: []
----
-apiVersion: policy.open-cluster-management.io/v1
-kind: PlacementBinding
-metadata:
-  name: policy-managed-openshift-compliance-operator-placement-binding
-  namespace: openshift-gitops
-placementRef:
-  name: placement-policy-gitops
-  apiGroup: apps.open-cluster-management.io
-  kind: PlacementRule
-subjects:
-  - name: policy-managed-compliance-operator
-    apiGroup: policy.open-cluster-management.io
-    kind: Policy
+
+
