--- a/clusters/its4u/apps/banner/base/home-banner.yaml
+++ b/clusters/its4u/apps/banner/base/home-banner.yaml
@@ -3,7 +3,7 @@ kind: ConsoleNotification
 metadata:
   name: home-banner
 spec:
-  text: "ITS4U - lab2"
+  text: "ITS4U - OCP"
   location: BannerTop
   color: '#fff'
-  backgroundColor: '#B40404'
+  backgroundColor: '#FFBF00'
