--- a/clusters/its4u/apps/banner/base/kustomization.yaml
+++ b/clusters/its4u/apps/banner/base/kustomization.yaml
@@ -1,2 +1,7 @@
-resources:
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
+bases:
+- ../../../components/apps/banner/base
+patchesStrategicMerge:
 - home-banner.yaml
