--- a/components/apps/banner/base/home-banner.yaml
+++ b/components/apps/banner/base/home-banner.yaml
@@ -3,5 +3,7 @@ kind: ConsoleNotification
 metadata:
   name: home-banner
 spec:
-  text: "ITS4U - OCP"
+  text: "OCP Title"
+  location: BannerTop
+  color: '#fff'
   backgroundColor: '#FFBF00'
