--- a/clusters/its4u/apps/banner/overlays/kustomization.yaml
+++ b/clusters/its4u/apps/banner/overlays/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 bases:
-- ../../../components/apps/banner/base
+- ../../../../components/apps/banner/base
 patchesStrategicMerge:
 - home-banner.yaml
