--- a/clusters/its4u-lab2/argocd/bootstrap/values.yaml
+++ b/clusters/its4u-lab2/argocd/bootstrap/values.yaml
@@ -36,7 +36,7 @@ applications:
    annotations:
      argocd.argoproj.io/compare-options: IgnoreExtraneous
    source:
-     path: components/configs/acm
+     path: components/configs/acm/base
 
 # alertmanager:
 #   annotations:
