--- a/components/configs/acm/base/PlacementRule/all-env-placement.yaml
+++ b/components/configs/acm/base/PlacementRule/all-env-placement.yaml
@@ -9,6 +9,7 @@ spec:
       type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - key: env
-        operator: Exists
-        values: []
+      - key: vendor
+        operator: In
+        values:
+          - OpenShift
