--- a/components/configs/acm/base/placementBinding/patch-registry-placement-binding.yaml
+++ b/components/configs/acm/base/placementBinding/patch-registry-placement-binding.yaml
@@ -4,10 +4,10 @@ metadata:
   name: policy-managed-patch-registry-placement-binding
   namespace: policies
 placementRef:
-  name: placement-policy-all-envs
+  name: infra-placement-policy
   apiGroup: apps.open-cluster-management.io
   kind: PlacementRule
 subjects:
-  - name: policy-patch-imageregistry-move-to-infra
+  - name: patch-imageregistry-move-to-infra
     apiGroup: policy.open-cluster-management.io
     kind: Policy
