--- a/components/configs/acm/base/policies/policy-patch-registry-move-to-infra-nodes.yaml
+++ b/components/configs/acm/base/policies/policy-patch-registry-move-to-infra-nodes.yaml
@@ -14,6 +14,7 @@ spec:
         metadata:
           name: patch-imageregistry-move-to-infra
         spec:
+          object-templates:
             - complianceType: musthave
               objectDefinition:
                 apiVersion: redhatcop.redhat.io/v1alpha1
