--- a/components/configs/acm/base/policies/policy-patch-registry-move-to-infra-nodes.yaml
+++ b/components/configs/acm/base/policies/policy-patch-registry-move-to-infra-nodes.yaml
@@ -32,10 +32,10 @@ spec:
                           tolerations:
                           - effect: NoSchedule
                             key: node-role.kubernetes.io/infra
-                            value: reserved
+                            value: ''
                           - effect: NoExecute
                             key: node-role.kubernetes.io/infra
-                            value: reserved
+                            value: ''
                       patchType: application/merge-patch+json
                       targetObjectRef:
                         apiVersion: imageregistry.operator.openshift.io/v1
