--- a/components/configs/acm/base/policies/policy-managed-openshift-gitops-bootstrap-app.yaml
+++ b/components/configs/acm/base/policies/policy-managed-openshift-gitops-bootstrap-app.yaml
@@ -107,6 +107,8 @@ spec:
                 spec:
                   patches:
                     argocd-operator-patch:
+                  patches:
+                    argocd-operator-patch:
                       patchTemplate: |
                         spec:
                           server:
