--- a/components/configs/acm/base/policies/policy-managed-acs-secured-cluster.yaml
+++ b/components/configs/acm/base/policies/policy-managed-acs-secured-cluster.yaml
@@ -15,7 +15,7 @@ spec:
         apiVersion: policy.open-cluster-management.io/v1
         kind: ConfigurationPolicy
         metadata:
-          name: stackrox-operator-ns
+          name: stackrox-operator-secured-ns
         spec:
           object-templates:
             - complianceType: musthave
@@ -31,7 +31,7 @@ spec:
         apiVersion: policy.open-cluster-management.io/v1
         kind: ConfigurationPolicy
         metadata:
-          name: acs-operator-status
+          name: acs-operator-secured-status
         spec:
           object-templates:
             - complianceType: musthave
