--- a/components/configs/acm/base/PlacementRule/acs-central-cluster-placement.yaml
+++ b/components/configs/acm/base/PlacementRule/acs-central-cluster-placement.yaml
@@ -9,7 +9,7 @@ spec:
       type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - key: acs
+      - key: acs-central
         operator: In
         values:
-        - central
+        - true
